Fixed embedded geoJSON

--- a/pkmn/ex-raids/index.html
+++ b/pkmn/ex-raids/index.html
@@ -2,5 +2,5 @@
     <title>EX Raids Osnabrück</title>
 </head>
 <body>
-    <script src="https://embed.github.com/view/geojson/hzpz/ex-raids-osnabrueck/master/ex-raid-os.geojson"></script>
+    <script src="https://embed.github.com/view/geojson/hzpz/ex-raids-osnabrueck/master/ex-raids-os.geojson?height=600&width=800"></script>
 </body>
