--- a/pkmn/ex-raids/index.html
+++ b/pkmn/ex-raids/index.html
@@ -1,29 +1,23 @@
 <head>
     <title>EX Raids Osnabrück</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-   crossorigin=""/>
+          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+          crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-   crossorigin=""></script>
+            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+            crossorigin=""></script>
+    <script src="ex-raids.js"></script>
     <style>
-    #mapid { height:100%; }
+        #exMap {
+            height: 100%;
+        }
     </style>
 </head>
 <body>
-    <div id="mapid"></div>
-    <script>
-    var mymap = L.map('mapid').setView([52.277440, 8.043946], 13);
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-    maxZoom: 18,
-    id: 'mapbox.streets',
-    accessToken: 'pk.eyJ1IjoiaHpweiIsImEiOiJjamN2dTc3cnQxMDBkMnFvN2pnMGlweGI0In0.bKg3Z9MAMwBm55PKhVCMuQ'
-	}).addTo(mymap);
-	fetch("ex-raids-os.geojson")
-            .then(data => data.json())
-            .then(data => {
-                L.geoJSON(data).addTo(mymap)
-            })
-    </script>
+<div id="exMap"></div>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        initMap();
+    });
+</script>
 </body>
